# Chonker9

./: .gitignore  .last_cleanup_hash  Cargo.toml  DESIGN.md  KEYBOARD.md  PERFORMANCE.md  SUMMARY.md  arrow_fix.patch  benchmark.sh  bevy_design.md  build.sh  build_spatial.sh  chonker5-tui-enhanced.rs  chonker5.rs  chonker9.sh  fix_arrow.sh  install.sh  justfile  run_tui.sh  simple_bevy_test.rs  tar  test_bevy_simple.rs  test_cosmic.rs  test_tui.sh  test_version.sh
.archive/: ENGINEERING_BLUEPRINT.md  IMMEDIATE_ACTION_PLAN.md
.cargo/: config.toml
.warp/: README.md  warp.yaml
.warp/notebooks/: known-issues.md
.warp/scripts/: sync.sh
.warp/workflows/: safe-commit.yaml
src/: main.rs  spatial_text.rs
